fixed overflow issue in safari, refactored animations to play after loader is done

--- a/styles/global.css
+++ b/styles/global.css
@@ -12,10 +12,13 @@
 body{
     /* scroll-behavior: smooth; */
     background-color: var(--parchment);
+    overflow-x: hidden;
+    position: relative;
 }
 
 html{
     overflow-x: hidden;
+    position: relative;
   }
 
 
